# moonlight-web-stream

./: .gitignore  Cargo.toml  Cross.toml  README.md  buildAll.ps1
.github/workflows/: my-sync-workflow.yaml
Cross/: Dockerfile  Dockerfile.windows  Dockerfile.x86_64-pc-windows-gnu  Windows  toolchain.cmake  windows.sh
docker/: .env  Dockerfile  Dockerfile.prerelease  README.md  config.json  default-config.json  docker-compose.with-turn.yaml  docker-compose.yaml  entrypoint.sh
docker/server/: config.json
moonlight-client-simple/: .gitignore  Cargo.toml
moonlight-client-simple/src/: gstreamer.rs  main.rs
moonlight-common/: Cargo.toml
moonlight-common-sys/: Cargo.toml  README.md  build.rs  crypto.h  limelight.h  wrapper.h
moonlight-common-sys/src/: crypto.rs  lib.rs  limelight.rs  windows_fix.rs
moonlight-common/src/: audio.rs  connection.rs  crypto.rs  data.rs  debug.rs  high.rs  lib.rs  mac.rs  network.rs  pair.rs  stage.rs  stream.rs  video.rs
moonlight-common/src/host/: mod.rs  network.rs  pair.rs
moonlight-common/src/moonlight/: audio.rs  connection.rs  crypto.rs  debug.rs  input.rs  mod.rs  stream.rs  video.rs
moonlight-common/src/network/: launch.rs  mod.rs  pair.rs  request_client.rs  reqwest.rs
moonlight-common/src/network/backend/: curl.rs  hyper_openssl.rs  mod.rs  reqwest.rs
moonlight-common/src/pair/: high.rs  mod.rs
moonlight-common/src/stream/: audio.rs  bindings.rs  connection.rs  debug.rs  mod.rs  stream.rs  video.rs
moonlight-web/: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json
moonlight-web/common/: Cargo.toml
moonlight-web/common/src/: api_bindings.rs  api_bindings_consts.rs  config.rs  ipc.rs  lib.rs
moonlight-web/src/: api.rs  api_bindings.rs  api_bindings_consts.rs  auth.rs  config.rs  data.rs  main.rs  web.rs
moonlight-web/src/api/: auth.rs  mod.rs  stream.rs
moonlight-web/src/api/stream/: audio.rs  buffer.rs  connection.rs  input.rs  mod.rs  video.rs
moonlight-web/src/api/stream/input/: mod.rs
moonlight-web/streamer/: Cargo.toml
moonlight-web/streamer/src/: audio.rs  buffer.rs  connection.rs  convert.rs  decoder.rs  input.rs  main.rs  sender.rs  video.rs
moonlight-web/streamer/src/transport/: mod.rs
moonlight-web/streamer/src/transport/web_socket/: mod.rs
moonlight-web/streamer/src/transport/webrtc/: audio.rs  mod.rs  sender.rs  video.rs
moonlight-web/streamer/src/transport/webrtc/video/h264/: mod.rs  reader.rs
moonlight-web/streamer/src/transport/webrtc/video/h265/: mod.rs  reader.rs
moonlight-web/streamer/src/video/: annexb.rs  h264.rs  h265.rs
moonlight-web/streamer/src/video/h264/: mod.rs  payloader.rs  reader.rs
moonlight-web/streamer/src/video/h265/: mod.rs  payloader.rs  reader.rs
moonlight-web/web/: api.ts  common.ts  config.d.ts  config.ts  config_.ts  gui.ts  host.ts  index.html  index.ts  stream.html  stream.ts  styles.css
moonlight-web/web-server/: Cargo.toml  generate_certificate.py  package-lock.json  package.json
moonlight-web/web-server/src/: api_bindings.rs  cli.rs  config.rs  data.rs  main.rs  web.rs
moonlight-web/web-server/src/api/: admin.rs  auth.rs  mod.rs  response_streaming.rs  stream.rs
moonlight-web/web-server/src/api/stream/: audio.rs  cancel.rs  decoder.rs  input.rs  mod.rs  video.rs
moonlight-web/web-server/src/app/: auth.rs  host.rs  mod.rs  password.rs  user.rs
moonlight-web/web-server/src/app/storage/: file.rs  mod.rs
moonlight-web/web-server/src/app/storage/json/: mod.rs  versions.rs
moonlight-web/web-server/web/: admin.html  admin.ts  api.ts  config.d.ts  config_.ts  experimental_apis.d.ts  index.html  index.ts  screen_keyboard.ts  stream.html  stream.ts  styles.css
moonlight-web/web-server/web/component/: context_menu.ts  error.ts  fetch_list.ts  input.ts  list.ts  settings_menu.ts
moonlight-web/web-server/web/component/game/: index.ts  list.ts
moonlight-web/web-server/web/component/host/: add_modal.ts  index.ts  list.ts
moonlight-web/web-server/web/component/modal/: index.ts  login.ts
moonlight-web/web-server/web/component/sidebar/: index.ts
moonlight-web/web-server/web/component/user/: add_modal.ts  detailed_page.ts  index.ts  list.ts
moonlight-web/web-server/web/polyfill/: abort_controller.ts
moonlight-web/web-server/web/resources/: index.ts
moonlight-web/web-server/web/stream/: buffer.ts  gamepad.ts  index.ts  input.ts  keyboard.ts  log.ts  stats.ts  video.ts
moonlight-web/web-server/web/stream/audio/: audio_decoder_pipe.ts  audio_element.ts  depacketize_pipe.ts  index.ts  media_stream_track_generator_pipe.ts  pipeline.ts
moonlight-web/web-server/web/stream/pipeline/: index.ts  pipes.ts  worker.ts  worker_io.ts  worker_pipe.ts  worker_types.d.ts
moonlight-web/web-server/web/stream/transport/: index.ts  web_socket.ts  webrtc.ts
moonlight-web/web-server/web/stream/video/: canvas.ts  canvas_element.ts  depackitize_video_pipe.ts  index.ts  media_stream_track_generator_pipe.ts  media_stream_track_processor_pipe.ts  offscreen_canvas.ts  pipeline.ts  video_decoder_pipe.ts  video_element.ts  video_track_generator.ts
moonlight-web/web-server/web/styles/: index.ts  styles.ts
moonlight-web/web/component/: context_menu.ts  error.ts  fetch_list.ts  index.ts  input.ts  list.ts  modal.ts  settings_menu.ts
moonlight-web/web/component/game/: index.ts  list.ts
moonlight-web/web/component/host/: add_modal.ts  index.ts  list.ts
moonlight-web/web/component/modal/: form.ts  index.ts
moonlight-web/web/component/sidebar/: index.ts
moonlight-web/web/gui/: component.ts  contextmenu.ts  error.ts  modal.ts
moonlight-web/web/resources/: index.ts
moonlight-web/web/stream/: buffer.ts  gamepad.ts  index.ts  input.ts  keyboard.ts  mouse.ts  touch.ts
