[workspace]
resolver = "3"
members = [
    "moonlight-client-simple",
    "moonlight-common",
    "moonlight-common-sys",
    "moonlight-web",
]

[workspace.package]
license = "GPL-3.0-or-later"

[workspace.dependencies]
moonlight-common = { path = "./moonlight-common" }
moonlight-common-sys = { path = "./moonlight-common-sys" }

openssl = "0.10.73"
openssl-sys = "0.9.109"

[workspace.lints.clippy]
too_many_arguments = "allow"
unwrap_used = "warn"
