[workspace]
resolver = "3"
members = [
    "moonlight-client-simple",
    "moonlight-common",
    "moonlight-common-sys",
    "moonlight-web/streamer",
    "moonlight-web/web-server",
]

[workspace.package]
license = "GPL-3.0-or-later"

[workspace.dependencies]
moonlight-common = { path = "./moonlight-common", default-features = false }
moonlight-common-sys = { path = "./moonlight-common-sys", default-features = false }

tokio = { version = "1.47.1" }

openssl = "0.10.73"
openssl-sys = "0.9.109"

[workspace.lints.clippy]
too_many_arguments = "allow"
unwrap_used = "warn"
