[package]
name = "moonlight-client-simple"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
moonlight-common-sys = { workspace = true }

moonlight-common = { workspace = true, features = [
    "high",
    "backend_reqwest",
    "stream",
] }
tokio = { version = "1.46.1", features = ["full"] }

rcgen = "0.14.3"
pem = "3.0.5"

gstreamer = "0.24.0"
gstreamer-app = "0.24.0"

audiopus_sys = { version = "0.2.2", features = ["static"] }
