[package]
name = "moonlight-client-simple"
version.workspace = true
edition = "2024"
license = { workspace = true }

[dependencies]
moonlight-common-sys = { workspace = true }
moonlight-common = { workspace = true, features = [
    "high",
    "backend_reqwest",
    "stream",
] }
tokio = { workspace = true, features = ["full"] }

rcgen = "0.14.3"
pem = { workspace = true }

gstreamer = "0.24.0"
gstreamer-app = "0.24.0"
