[package]
name = "moonlight-common-sys"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
openssl-sys = { workspace = true }

[features]
default = ["vendored", "openssl-sys/vendored"]

# Moonlight Features
crypto = []

# Bindings
generate-bindings = ["dep:bindgen"]

# Linking / Compilation
vendored = ["build-moonlight_common_c", "link-enet"]

link-enet = []
link-moonlight_common_c = []
build-moonlight_common_c = ["link-moonlight_common_c", "dep:cmake"]

[build-dependencies]
bindgen = { version = "0.72.0", optional = true }
cmake = { version = "0.1.54", optional = true }
