[package]
name = "moonlight-common"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
bitflags = "2.9.1"
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
thiserror = "2.0.12"

# Stream
moonlight-common-sys = { workspace = true, optional = true }
printf-compat = { version = "0.2.1", optional = true }

# Network
uuid = { version = "1.17.0", features = ["v4"], optional = true }
hex = { version = "0.4.3", optional = true }
url = { version = "2.5.4", optional = true }
roxmltree = { version = "0.20.0", optional = true }
form_urlencoded = { version = "1.2.1", optional = true }

# Network Reqwest backend
reqwest = { version = "0.12.22", optional = true }
bytes = { version = "1.10.1", optional = true }

# High
log = { version = "0.4.27", optional = true }
tokio = { version = "1.46.1", default-features = false, features = [
    "rt",
    "rt-multi-thread",
], optional = true }
pem = { version = "3.0.5", optional = true }
openssl = { workspace = true }

[features]
default = ["high", "moonlight", "backend_reqwest"]

# High level api
high = ["network", "pair", "dep:log", "dep:tokio"]

# Moonlight Common C / Stream
# TODO: rename to stream
moonlight = ["dep:moonlight-common-sys", "dep:printf-compat"]

# Pairing
pair = ["network"]

# Network
network = [
    "dep:url",
    "dep:form_urlencoded",
    "dep:roxmltree",
    "dep:uuid",
    "dep:hex",

    "dep:pem",
]
# Reqwest Network Backend
backend_reqwest = [
    "dep:reqwest",
    "reqwest/native-tls",
    "dep:tokio",
    "dep:bytes",
]

[lints]
workspace = true
