[package]
name = "moonlight-web"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
moonlight-common = { workspace = true }

actix-web = "4.11.0"
actix-files = "0.6.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
ts-rs = "11.0.1"
pem = "3.0.5"
slab = "0.4.10"
log = "0.4.27"
simplelog = "0.12.2"

[features]

[lints]
workspace = true
