[package]
name = "moonlight-web"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
moonlight-common = { workspace = true }

tokio = { version = "1.47.1", features = ["fs"] }

actix-web = "4.11.0"
actix-files = "0.6.6"
actix-ws = "0.3.0"

webrtc = "0.13.0"

log = "0.4.27"
simplelog = "0.12.2"

num-traits = "0.2.19"

anyhow = "1.0.98"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
pem = "3.0.5"

slab = "0.4.10"
async-stream = "0.3.6"

ts-rs = "11.0.1"
futures = "0.3.31"

[features]

[lints]
workspace = true
