[package]
name = "common"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
moonlight-common = { workspace = true, features = [
    "network",
    "stream",
    "serde",
] }

tokio = { workspace = true, features = [
    "process",
    "rt",
    "io-util",
    "io-std",
    "sync",
] }

pem = { workspace = true, features = ["serde"] }

serde = { workspace = true }
serde_json = { workspace = true }

log = { workspace = true, features = ["serde"] }

ts-rs = { workspace = true, features = ["uuid-impl"] }

[lints]
workspace = true
