[package]
name = "streamer"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
moonlight-common = { workspace = true, features = [
    "high",
    "backend_reqwest",
    "moonlight",
] }
common = { path = "../common" }

tokio = { workspace = true }

bytes = { workspace = true }
webrtc = "0.13.0"

pem = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

num = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

log = { workspace = true }
simplelog = { workspace = true }

[lints]
workspace = true
