[package]
name = "streamer"
version.workspace = true
edition = "2024"
license.workspace = true

[dependencies]
moonlight-common = { workspace = true, features = [
    "high",
    "backend_reqwest",
    "stream",
] }
common = { path = "../common" }

tokio = { workspace = true }
webrtc = { workspace = true }
bytes = { workspace = true }

pem = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }

num = { workspace = true }
num-derive = { workspace = true }
num-traits = { workspace = true }

log = { workspace = true }
simplelog = { workspace = true }

[lints]
workspace = true
