[package]
name = "web-server"
version = "0.1.0"
edition = "2024"
license = { workspace = true }

[dependencies]
moonlight-common = { workspace = true, features = ["high", "backend_reqwest"] }
common = { path = "../common" }

tokio = { workspace = true, features = ["fs"] }

actix-web = { version = "4.11.0", features = ["openssl"] }
openssl = { workspace = true }
actix-files = "0.6.6"
actix-ws = "0.3.0"

log = { workspace = true }
simplelog = { workspace = true }

anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
pem = { workspace = true }

slab = "0.4.10"
async-stream = "0.3.6"
futures = "0.3.31"

[lints]
workspace = true
