[package]
name = "web-server"
version.workspace = true
edition = "2024"
license = { workspace = true }

[dependencies]
moonlight-common = { workspace = true, features = ["high", "backend_reqwest"] }
common = { path = "../common" }

tokio = { workspace = true, features = ["fs"] }

actix-web = { workspace = true, features = ["openssl"] }
openssl = { workspace = true }
actix-files = { workspace = true }
actix-ws = { workspace = true }

log = { workspace = true }
simplelog = { workspace = true }

anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
pem = { workspace = true }

slab = { workspace = true }
async-stream = { workspace = true }
futures = { workspace = true }

[lints]
workspace = true
